    * JSONResponse support all response type now (data argument)
    * EmptyResponse replaced by NoContentResponse
    * new NotModifiedResponse
    * time_to_http, datetime_to_http, http_to_datetime and http_to_time header
      functions for manipulating Date type headers
    * FileResponse generates Last-Modified header now
    * Response and FileObjResponse can be partial

==== 2.5.0 ====
    * fix file callback on files smaller than 1000B
    * add FileObjResponse class
    * add BaseResponse class
    * unicode support in url path
    * call file_callback only for files entries (with filename)
    * fix openapi wrapper mime type
    * Session use JSON for secority issue
    * Bad JSON request generate HTTP Bad Request response
      * All error handlers has error named argument
    * new examples
      * large_file.py - own file_callback for uploading large data
      * websocket.py - websocket simple chat example
    * new TextResponse class
    * CachedInput for faster upload
    * Default Output data buffer is 65365 now
    * rename before_request to before_response
    * rename after_request to after_response
    * new start_time and end_time Request properties
    * new metrics example
    * input chunked encoding support
    * parse_json_request need bytes on input
    * add stalled file download timeout

==== 2.4.0 ====
    * new render_negotiation function
    * Headers improvement
    * error handlers support
    * permanent attribute for redirect and RedirectResponse is deprecated now,
      but status_code can be used
    * host port returns port from HOST or scheme
    * openapi wrapper binds request to Host or Forwarded header
    * new PoorSession interface
        * use secret_key instead of Request object in __init__ method
        * use load method for loading cookie
    * handler_from_before is called only once
    * fix FileResponse Content-Length header

==== 2.3.4 ====
    * new cgi.py interface fix

==== 2.3.3 ====