@@ -8,6 +8,7 @@
       functions for manipulating Date type headers
     * FileResponse generates Last-Modified header now
     * Response and FileObjResponse can be partial
+    * JSONResponse Encoder arguments
 
 ==== 2.5.0 ====
     * fix file callback on files smaller than 1000B
